--- a/mailnews/base/prefs/content/am-smtp.xhtml
+++ b/mailnews/base/prefs/content/am-smtp.xhtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="chrome://messenger/skin/accountManage.css" />
 
     <link rel="localization" href="messenger/accountManager.ftl" />
+    <link rel="localization" href="messenger/certError.ftl" />
 
     <script
       defer="defer"
@@ -26,6 +27,10 @@
     <script
       defer="defer"
       src="chrome://global/content/editMenuOverlay.js"
+    ></script>
+    <script
+      type="module"
+      src="chrome://messenger/content/certificate-check.mjs"
     ></script>
     <script defer="defer" src="chrome://messenger/content/amUtils.js"></script>
     <script defer="defer" src="chrome://messenger/content/am-smtp.js"></script>
