Bug 1984294 - Give the calControlBarMenuPopup the needed gutter. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D261892

--- a/calendar/base/content/calendar-tab-panels.inc.xhtml
+++ b/calendar/base/content/calendar-tab-panels.inc.xhtml
@@ -640,7 +640,9 @@
 
 <!-- Menus -->
 
-<menupopup id="calControlBarMenuPopup" position="bottomleft topleft">
+<menupopup id="calControlBarMenuPopup"
+           class="gutter-popup"
+           position="bottomleft topleft">
   <menuitem id="findEventsButton"
             data-l10n-id="calendar-find-events-menu-option"
             type="checkbox"
