Bug 1957486 - Implement a more consistent drop widget. r=freaktechnik
- The dragged folder row is faded and gets a dashed border.
- The drop target is the same one used for tabs reordering.

Differential Revision: https://phabricator.services.mozilla.com/D256731

--- a/mail/base/content/about3Pane.xhtml
+++ b/mail/base/content/about3Pane.xhtml
@@ -49,6 +49,7 @@
   <script type="module" src="chrome://messenger/content/tree-listbox.mjs"></script>
   <script type="module" src="chrome://messenger/content/thread-card.mjs"></script>
   <script type="module" src="chrome://messenger/content/thread-row.mjs"></script>
+  <script type="module" src="chrome://messenger/content/drop-indicator.mjs"></script>
   <script type="module" src="chrome://messenger/content/folder-tree-row.mjs"></script>
   <script type="module" src="chrome://messenger/content/tree-view.mjs"></script>
   <script type="module" src="chrome://messenger/content/pane-layout.mjs"></script>
@@ -59,6 +60,7 @@
 </head>
 <body id="paneLayout" is="pane-layout" class="layout-classic">
   <div id="folderPane" class="collapsed-by-splitter" tabindex="-1">
+    <img is="drop-indicator" id="dropIndicator" horizontal="horizontal" />
     <div id="folderPaneHeaderBar" class="sidebar-panel-header" hidden="hidden">
 # Force a reverse tabindex to work alongside the `flex-direction: row-reverse`
 # in order to guarantee a consistent end alignment of the `#folderPaneMoreButton`.
