--- a/calendar/base/content/calendar-tab-panels.inc.xhtml
+++ b/calendar/base/content/calendar-tab-panels.inc.xhtml
@@ -418,7 +418,7 @@
                     </toolbarbutton>
                     <toolbarbutton is="toolbarbutton-menu-button" id="task-actions-markcompleted"
                                    type="menu"
-                                   label="&calendar.context.markcompleted.label;"
+                                   data-l10n-id="calendar-context-mark-completed"
                                    tooltiptext="&calendar.task.complete.button.tooltip;"
                                    command="calendar_toggle_completed_command"
                                    class="toolbarbutton-1 message-header-view-button">
@@ -427,7 +427,7 @@
                     <toolbarbutton id="task-actions-priority"
                                    type="menu"
                                    wantdropmarker="true"
-                                   label="&calendar.context.priority.label;"
+                                   data-l10n-id="calendar-context-priority"
                                    tooltiptext="&calendar.task.priority.button.tooltip;"
                                    command="calendar_general-priority_command"
                                    class="toolbarbutton-1 message-header-view-button">
