--- a/mail/base/content/mailContext.inc.xhtml
+++ b/mail/base/content/mailContext.inc.xhtml
@@ -310,18 +310,15 @@
 
         <menu id="mailContext-calendar-convert-menu"
               class="menu-iconic hide-when-calendar-deactivated"
-              label="&calendar.context.convertmenu.label;"
-              accesskey="&calendar.context.convertmenu.accesskey.mail;">
+              data-l10n-id="calendar-context-convert-menu">
           <menupopup id="mailContext-calendar-convert-menupopup"
                      class="no-icon-menupopup">
             <menuitem id="mailContext-calendar-convert-event-menuitem"
                       class="menuitem-iconic"
-                      label="&calendar.context.convertmenu.event.label;"
-                      accesskey="&calendar.context.convertmenu.event.accesskey;"/>
+                      data-l10n-id="calendar-context-convert-to-event"/>
             <menuitem id="mailContext-calendar-convert-task-menuitem"
                       class="menuitem-iconic"
-                      label="&calendar.context.convertmenu.task.label;"
-                      accesskey="&calendar.context.convertmenu.task.accesskey;"/>
+                      data-l10n-id="calendar-context-convert-to-task"/>
           </menupopup>
         </menu>
         <menuitem id="mailContext-copyMessageLink"
