--- a/mail/base/content/msgHdrView.inc.xhtml
+++ b/mail/base/content/msgHdrView.inc.xhtml
@@ -210,19 +210,16 @@
                     oncommand="goDoCommand('cmd_print');"/>
           <menu id="otherActions-calendar-convert-menu"
                 class="menu-iconic"
-                label="&calendar.context.convertmenu.label;"
-                accesskey="&calendar.context.convertmenu.accesskey.mail;">
+                data-l10n-id="calendar-context-convert-menu">
             <menupopup id="otherActions-calendar-convert-menupopup"
                        class="no-icon-menupopup">
               <menuitem id="otherActions-calendar-convert-event-menuitem"
                         class="menuitem-iconic"
-                        label="&calendar.context.convertmenu.event.label;"
-                        accesskey="&calendar.context.convertmenu.event.accesskey;"
+                        data-l10n-id="calendar-context-convert-to-event"
                         oncommand="convertToEventOrTask(true);"/>
               <menuitem id="otherActions-calendar-convert-task-menuitem"
                         class="menuitem-iconic"
-                        label="&calendar.context.convertmenu.task.label;"
-                        accesskey="&calendar.context.convertmenu.task.accesskey;"
+                        data-l10n-id="calendar-context-convert-to-task"
                         oncommand="convertToEventOrTask(false);"/>
             </menupopup>
           </menu>
