--- a/calendar/base/content/dialogs/calendar-creation.xhtml
+++ b/calendar/base/content/dialogs/calendar-creation.xhtml
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="chrome://messenger/skin/themeableDialog.css" />
     <link rel="stylesheet" href="chrome://calendar/skin/shared/calendar-creation.css" />
     <link rel="localization" href="toolkit/global/wizard.ftl" />
+    <link rel="localization" href="calendar/calendar.ftl" />
     <link rel="localization" href="calendar/calendar-creation.ftl" />
     <script defer="defer" src="chrome://messenger/content/globalOverlay.js"></script>
     <script defer="defer" src="chrome://global/content/editMenuOverlay.js"></script>
@@ -246,7 +247,8 @@
         </hbox>
         <richlistbox
           id="network-calendar-list"
-          propertiesbuttonlabel="&calendar.context.properties.label;"
+          data-l10n-id="calendar-context-properties"
+          data-l10n-attrs="aria-label"
         />
         <html:hr />
         <hbox>
