Bug 1987033 - Break up mailWidgets.js. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D263822

--- a/mail/base/content/aboutMessage.xhtml
+++ b/mail/base/content/aboutMessage.xhtml
@@ -77,6 +77,7 @@
   <script defer="defer" src="chrome://messenger/content/mailCommon.js"></script>
   <script defer="defer" src="chrome://messenger/content/msgHdrView.js"></script>
   <script defer="defer" src="chrome://messenger/content/aboutMessage.js"></script>
+  <script type="module" src="chrome://messenger/content/attachment-list.mjs"></script>
 </head>
 <html:body xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
 
