--- a/mail/base/test/widgets/files/menulist.xhtml
+++ b/mail/base/test/widgets/files/menulist.xhtml
@@ -6,6 +6,7 @@
   <head>
     <link rel="stylesheet" href="chrome://global/skin/global.css" />
     <link rel="stylesheet" href="chrome://messenger/skin/menulist.css" />
+    <script type="module" src="chrome://messenger/content/menulist-editable.mjs" />
   </head>
 <html:body xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <button id="before" label="I'm just a button" onclick="alert('I\'m a button!')"/>
