--- a/mail/base/content/messenger.xhtml
+++ b/mail/base/content/messenger.xhtml
@@ -249,6 +249,7 @@
   <script defer="defer" src="chrome://calendar/content/calendar-dialog-utils.js"></script>
   <script defer="defer" src="chrome://calendar/content/calApplicationUtils.js"></script>
   <script defer="defer" src="chrome://calendar/content/calendar-menus.js"></script>
+  <script type="module" src="chrome://messenger/content/treecol-image.mjs"></script>
 
   <!-- NEEDED FOR MIGRATION CHECK AT INSTALL -->
   <script defer="defer" src="chrome://calendar/content/calendar-migration.js"></script>
