--- a/mail/base/content/mailContext.inc.xhtml
+++ b/mail/base/content/mailContext.inc.xhtml
@@ -268,14 +268,11 @@
                   accesskey="&markStarredCmd.accesskey;"/>
         <menuseparator/>
         <menuitem id="mailContext-markAsJunk"
-                  label="&markAsJunkCmd.label;"
-                  accesskey="&markAsJunkCmd.accesskey;"/>
+                  data-l10n-id="menu-mark-as-spam"/>
         <menuitem id="mailContext-markAsNotJunk"
-                  label="&markAsNotJunkCmd.label;"
-                  accesskey="&markAsNotJunkCmd.accesskey;"/>
+                  data-l10n-id="menu-mark-not-spam"/>
         <menuitem id="mailContext-recalculateJunkScore"
-                  label="&recalculateJunkScoreCmd.label;"
-                  accesskey="&recalculateJunkScoreCmd.accesskey;"/>
+                  data-l10n-id="menu-recalculate-spam-score"/>
       </menupopup>
     </menu>
 
