--- a/mail/base/content/about3Pane.xhtml
+++ b/mail/base/content/about3Pane.xhtml
@@ -453,8 +453,7 @@
               label="&folderContextEmptyTrash.label;"
               accesskey="&folderContextEmptyTrash.accesskey;"/>
     <menuitem id="folderPaneContext-emptyJunk"
-              label="&folderContextEmptyJunk.label;"
-              accesskey="&folderContextEmptyJunk.accesskey;"/>
+              data-l10n-id="folder-context-empty-spam"/>
     <menuitem id="folderPaneContext-sendUnsentMessages"
               label="&folderContextSendUnsentMessages.label;"
               accesskey="&folderContextSendUnsentMessages.accesskey;"/>
@@ -717,8 +716,7 @@
                   type="radio"
                   name="sortby"
                   value="junkStatusCol"
-                  label="&sortByJunkStatusCmd.label;"
-                  accesskey="&sortByJunkStatusCmd.accesskey;"/>
+                  data-l10n-id="sort-by-spam-status"/>
         <menuitem id="threadPaneSortByAttachmentsMenuitem"
                   type="radio"
                   name="sortby"
