--- a/mailnews/base/prefs/content/am-junk.xhtml
+++ b/mailnews/base/prefs/content/am-junk.xhtml
@@ -4,10 +4,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!DOCTYPE html [ <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd">
-%brandDTD;
-<!ENTITY % junkMailDTD SYSTEM "chrome://messenger/locale/am-junk.dtd">
-%junkMailDTD; ]>
+<!DOCTYPE html>
 
 <html
   xmlns="http://www.w3.org/1999/xhtml"
@@ -15,7 +12,7 @@
   xmlns:html="http://www.w3.org/1999/xhtml"
 >
   <head>
-    <title>&junkSettings.label;</title>
+    <title data-l10n-id="spam-settings-title"></title>
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src chrome:; script-src chrome: 'unsafe-inline' moz-src:; style-src chrome: 'unsafe-inline'"
@@ -23,6 +20,8 @@
     <link rel="stylesheet" href="chrome://messenger/skin/accountManage.css" />
     <link rel="stylesheet" href="chrome://messenger/skin/icons.css" />
     <link rel="stylesheet" href="chrome://messenger/skin/folderMenus.css" />
+    <link rel="localization" href="branding/brand.ftl" />
+    <link rel="localization" href="messenger/preferences/am-spam.ftl" />
     <script defer="defer" src="chrome://messenger/content/am-junk.js"></script>
     <script defer="defer" src="chrome://messenger/content/am-prefs.js"></script>
     <script defer="defer" src="chrome://messenger/content/amUtils.js"></script>
@@ -43,12 +42,12 @@
       />
 
       <hbox class="dialogheader">
-        <label class="dialogheader-title" value="&junkSettings.label;" />
+        <label class="dialogheader-title" data-l10n-id="dialog-header-title" />
       </hbox>
 
       <html:div>
         <html:fieldset>
-          <html:legend>&junkClassification.label;</html:legend>
+          <html:legend data-l10n-id="spam-classification-legend"></html:legend>
 
           <label
             hidden="true"
@@ -104,14 +103,13 @@
           <checkbox
             id="server.spamLevel.visible"
             oncommand="updateSpamLevel(this.checked);"
-            accesskey="&level.accesskey;"
+            data-l10n-id="spam-level-checkbox"
             prefstring="mail.server.%serverkey%.spamLevel"
-            label="&level.label;"
           />
 
           <separator class="thin" />
 
-          <description width="1">&trainingDescription.label;</description>
+          <description data-l10n-id="training-description-spam"></description>
 
           <separator class="thin" />
           <spacer height="3" />
@@ -128,10 +126,9 @@
             />
             <label
               id="whiteListLabel"
-              accesskey="&whitelistHeader.accesskey;"
+              data-l10n-id="allowlist-header-label"
               control="whiteListAbURI"
-              >&whitelistHeader.label;</label
-            >
+            />
             <richlistbox id="whiteListAbURI" height="200px" />
           </vbox>
 
@@ -141,8 +138,7 @@
             <hbox>
               <checkbox
                 id="server.useServerFilter"
-                label="&ispHeaders.label;"
-                accesskey="&ispHeaders.accesskey;"
+                data-l10n-id="isp-headers-checkbox"
                 genericattr="true"
                 pref="true"
                 wsm_persist="true"
@@ -160,9 +156,10 @@
 
           <separator class="thin" />
 
-          <description class="indent tip-caption" width="1"
-            >&ispHeadersWarning.label;</description
-          >
+          <description
+            class="indent tip-caption"
+            data-l10n-id="isp-warning-description"
+          />
         </html:fieldset>
       </html:div>
 
@@ -171,12 +168,11 @@
 
       <html:div>
         <html:fieldset>
-          <html:legend>&junkActions.label;</html:legend>
+          <html:legend data-l10n-id="spam-actions-legend"></html:legend>
 
           <checkbox
             id="server.moveOnSpam"
-            label="&move.label;"
-            accesskey="&move.accesskey;"
+            data-l10n-id="move-spam-message-menuitem"
             oncommand="updateJunkTargetsAndRetention();"
             wsm_persist="true"
             pref="true"
@@ -202,16 +198,14 @@
                   <radio
                     id="moveTargetMode0"
                     value="0"
-                    label="&junkFolderOn.label;"
-                    accesskey="&junkFolderOn.accesskey;"
+                    data-l10n-id="set-spam-folder-menuitem"
                   />
                 </hbox>
                 <hbox flex="1" align="center">
                   <radio
                     id="moveTargetMode1"
                     value="1"
-                    label="&otherFolder.label;"
-                    accesskey="&otherFolder.accesskey;"
+                    data-l10n-id="move-message-other"
                   />
                 </hbox>
               </vbox>
@@ -251,14 +245,13 @@
           <hbox align="center" class="indent">
             <checkbox
               id="server.purgeSpam"
+              data-l10n-id="automatic-spam-purge-checkbox"
               genericattr="true"
               pref="true"
               wsm_persist="true"
               preftype="bool"
               prefstring="mail.server.%serverkey%.purgeSpam"
-              accesskey="&purge1.accesskey;"
               oncommand="updateJunkRetention();"
-              label="&purge1.label;"
             />
             <html:input
               id="server.purgeSpamInterval"
@@ -274,7 +267,7 @@
             />
             <label
               id="purgeLabel"
-              value="&purge2.label;"
+              data-l10n-id="automatic-spam-purge-label"
               control="server.purgeSpamInterval"
             />
           </hbox>
@@ -286,8 +279,7 @@
       <hbox pack="end">
         <button
           id="globalJunkPrefsLink"
-          label="&globalJunkPrefs.label;"
-          accesskey="&globalJunkPrefs.accesskey;"
+          data-l10n-id="global-spam-preferences-button"
           oncommand="showGlobalJunkPrefs();"
         />
       </hbox>
