--- a/mailnews/search/content/FilterEditor.xhtml
+++ b/mailnews/search/content/FilterEditor.xhtml
@@ -31,6 +31,7 @@
   <link rel="stylesheet" href="chrome://messenger/skin/themeableDialog.css" />
   <link rel="stylesheet" href="chrome://messenger/skin/filterDialog.css" />
   <link rel="stylesheet" href="chrome://messenger/skin/filterEditor.css" />
+  <link rel="localization" href="messenger/filterEditor.ftl" />
   <script defer="defer" src="chrome://messenger/content/globalOverlay.js"></script>
   <script defer="defer" src="chrome://global/content/editMenuOverlay.js"></script>
   <script defer="defer" src="chrome://messenger/content/searchWidgets.js"></script>
@@ -80,9 +81,9 @@
                   command="cmd_updateFilterType">
           <menupopup>
             <menuitem id="runBeforePlugins"
-                      label="&contextBeforeCls.label;"/>
+                      data-l10n-id="run-filter-before-spam"/>
             <menuitem id="runAfterPlugins"
-                      label="&contextAfterCls.label;"/>
+                      data-l10n-id="run-filter-after-spam"/>
           </menupopup>
         </menulist>
       </hbox>
