Backed out changeset 4a4e5f0e4163 (Bug 1823084) for causing test fails. r=backout
https://treeherder.mozilla.org/jobs?repo=comm-central&revision=0ad4a85662e1c7f867f5585562b143a3c22ae6d9&selectedTaskRun=JAzdDHp7R0WHOcPxFPOkOw>

--- a/mail/base/content/SearchDialog.xhtml
+++ b/mail/base/content/SearchDialog.xhtml
@@ -36,7 +36,6 @@
   <link rel="stylesheet" href="chrome://messenger/skin/colors.css" />
   <link rel="stylesheet" href="chrome://messenger/skin/folderMenus.css" />
   <link rel="stylesheet" href="chrome://messenger/skin/contextMenu.css" />
-  <link rel="localization" href="messenger/messenger.ftl" />
   <script defer="defer" src="chrome://messenger/content/globalOverlay.js"></script>
   <script defer="defer" src="chrome://global/content/editMenuOverlay.js"></script>
   <script defer="defer" src="chrome://messenger/content/searchWidgets.js"></script>
@@ -224,7 +223,8 @@
                      cycler="true"
                      closemenu="none"
                      src="chrome://messenger/skin/icons/new/spam-sm.svg"
-                     data-l10n-id="column-status-spam"/>
+                     label="&junkStatusColumn.label;"
+                     tooltiptext="&junkStatusColumn2.tooltip;"/>
             <splitter class="tree-splitter"/>
             <treecol id="receivedCol"
                      persist="hidden ordinal sortDirection width"
