--- a/mail/base/content/about3Pane.xhtml
+++ b/mail/base/content/about3Pane.xhtml
@@ -453,7 +453,8 @@
               label="&folderContextEmptyTrash.label;"
               accesskey="&folderContextEmptyTrash.accesskey;"/>
     <menuitem id="folderPaneContext-emptyJunk"
-              data-l10n-id="folder-context-empty-spam"/>
+              label="&folderContextEmptyJunk.label;"
+              accesskey="&folderContextEmptyJunk.accesskey;"/>
     <menuitem id="folderPaneContext-sendUnsentMessages"
               label="&folderContextSendUnsentMessages.label;"
               accesskey="&folderContextSendUnsentMessages.accesskey;"/>
@@ -716,7 +717,8 @@
                   type="radio"
                   name="sortby"
                   value="junkStatusCol"
-                  data-l10n-id="sort-by-spam-status"/>
+                  label="&sortByJunkStatusCmd.label;"
+                  accesskey="&sortByJunkStatusCmd.accesskey;"/>
         <menuitem id="threadPaneSortByAttachmentsMenuitem"
                   type="radio"
                   name="sortby"
