--- a/mail/base/content/mailContext.inc.xhtml
+++ b/mail/base/content/mailContext.inc.xhtml
@@ -268,11 +268,14 @@
                   accesskey="&markStarredCmd.accesskey;"/>
         <menuseparator/>
         <menuitem id="mailContext-markAsJunk"
-                  data-l10n-id="menu-mark-as-spam"/>
+                  label="&markAsJunkCmd.label;"
+                  accesskey="&markAsJunkCmd.accesskey;"/>
         <menuitem id="mailContext-markAsNotJunk"
-                  data-l10n-id="menu-mark-not-spam"/>
+                  label="&markAsNotJunkCmd.label;"
+                  accesskey="&markAsNotJunkCmd.accesskey;"/>
         <menuitem id="mailContext-recalculateJunkScore"
-                  data-l10n-id="menu-recalculate-spam-score"/>
+                  label="&recalculateJunkScoreCmd.label;"
+                  accesskey="&recalculateJunkScoreCmd.accesskey;"/>
       </menupopup>
     </menu>
 
