--- a/mail/base/content/mainKeySet.inc.xhtml
+++ b/mail/base/content/mainKeySet.inc.xhtml
@@ -60,8 +60,8 @@
 
   <key id="key_toggleRead" key="&toggleReadCmd.key;"                 oncommand="goDoCommand('cmd_toggleRead');"/>
   <key id="key_toggleFlagged" key="&markStarredCmd.key;"             oncommand="goDoCommand('cmd_markAsFlagged');"/>
-  <key id="key_markJunk" data-l10n-id="mark-as-junk-key" oncommand="goDoCommand('cmd_markAsJunk');"/>
-  <key id="key_markNotJunk" data-l10n-id="mark-not-junk-key" oncommand="goDoCommand('cmd_markAsNotJunk');"
+  <key id="key_markJunk" key="&markAsJunkCmd.key;"                   oncommand="goDoCommand('cmd_markAsJunk');"/>
+  <key id="key_markNotJunk" key="&markAsNotJunkCmd.key;"             oncommand="goDoCommand('cmd_markAsNotJunk');"
        modifiers="shift"/>
 
   <key id="key_markAllRead" key="&markAllReadCmd.key;"
