--- a/mail/base/content/msgHdrView.inc.xhtml
+++ b/mail/base/content/msgHdrView.inc.xhtml
@@ -127,8 +127,8 @@
                      tooltiptext="&hdrArchiveButton1.tooltip;"
                      oncommand="goDoCommand('cmd_archive');"
                      class="toolbarbutton-1 message-header-view-button hdrArchiveButton"/>
-      <toolbarbutton id="hdrJunkButton"
-                     data-l10n-id="header-spam-button"
+      <toolbarbutton id="hdrJunkButton" label="&hdrJunkButton1.label;"
+                     tooltiptext="&hdrJunkButton1.tooltip;"
                      observes="cmd_markAsJunk"
                      class="toolbarbutton-1 message-header-view-button hdrJunkButton"
                      oncommand="goDoCommand('cmd_markAsJunk');"/>
