--- a/mail/base/content/messenger-menubar.inc.xhtml
+++ b/mail/base/content/messenger-menubar.inc.xhtml
@@ -590,7 +590,8 @@
                   type="radio"
                   name="sortby"
                   value="junkStatusCol"
-                  data-l10n-id="sort-by-spam-status"/>
+                  label="&sortByJunkStatusCmd.label;"
+                  accesskey="&sortByJunkStatusCmd.accesskey;"/>
         <menuitem id="sortByAttachmentsMenuitem"
                   type="radio"
                   name="sortby"
@@ -1062,16 +1063,17 @@
                       command="cmd_markAsFlagged"
                       key="key_toggleFlagged"/>
             <menuseparator id="markMenuAfterFlaggedSeparator"/>
-            <menuitem id="menu_markAsJunk"
-                      data-l10n-id="menu-mark-as-spam"
+            <menuitem id="menu_markAsJunk" label="&markAsJunkCmd.label;"
+                      accesskey="&markAsJunkCmd.accesskey;"
                       command="cmd_markAsJunk"
                       key="key_markJunk"/>
-            <menuitem id="menu_markAsNotJunk"
-                      data-l10n-id="menu-mark-not-spam"
+            <menuitem id="menu_markAsNotJunk" label="&markAsNotJunkCmd.label;"
                       key="key_markNotJunk"
+                      accesskey="&markAsNotJunkCmd.accesskey;"
                       command="cmd_markAsNotJunk"/>
             <menuitem id="menu_recalculateJunkScore"
-                      data-l10n-id="menu-recalculate-spam-score"
+                      label="&recalculateJunkScoreCmd.label;"
+                      accesskey="&recalculateJunkScoreCmd.accesskey;"
                       command="cmd_recalculateJunkScore"/>
           </menupopup>
         </menu>
@@ -1197,10 +1199,12 @@
               command="cmd_applyFiltersToSelection"/>
     <menuseparator id="tasksMenuAfterApplySeparator"/>
     <menuitem id="runJunkControls"
-              data-l10n-id="menu-run-spam-on-folder"
+              label="&runJunkControls.label;"
+              accesskey="&runJunkControls.accesskey;"
               command="cmd_runJunkControls"/>
     <menuitem id="deleteJunk"
-              data-l10n-id="menu-delete-spam"
+              label="&deleteJunk.label;"
+              accesskey="&deleteJunk.accesskey;"
               command="cmd_deleteJunk"/>
     <menuseparator id="tasksMenuAfterDeleteSeparator"/>
     <menuitem id="menu_import" label="&importCmd.label;"
