--- a/mailnews/base/prefs/content/am-junk.xhtml
+++ b/mailnews/base/prefs/content/am-junk.xhtml
@@ -4,7 +4,10 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!DOCTYPE html>
+<!DOCTYPE html [ <!ENTITY % brandDTD SYSTEM "chrome://branding/locale/brand.dtd">
+%brandDTD;
+<!ENTITY % junkMailDTD SYSTEM "chrome://messenger/locale/am-junk.dtd">
+%junkMailDTD; ]>
 
 <html
   xmlns="http://www.w3.org/1999/xhtml"
@@ -12,7 +15,7 @@
   xmlns:html="http://www.w3.org/1999/xhtml"
 >
   <head>
-    <title data-l10n-id="spam-settings-title"></title>
+    <title>&junkSettings.label;</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src chrome:; script-src chrome: 'unsafe-inline' moz-src:; style-src chrome: 'unsafe-inline'"
@@ -20,8 +23,6 @@
     <link rel="stylesheet" href="chrome://messenger/skin/accountManage.css" />
     <link rel="stylesheet" href="chrome://messenger/skin/icons.css" />
     <link rel="stylesheet" href="chrome://messenger/skin/folderMenus.css" />
-    <link rel="localization" href="branding/brand.ftl" />
-    <link rel="localization" href="messenger/preferences/am-spam.ftl" />
     <script defer="defer" src="chrome://messenger/content/am-junk.js"></script>
     <script defer="defer" src="chrome://messenger/content/am-prefs.js"></script>
     <script defer="defer" src="chrome://messenger/content/amUtils.js"></script>
@@ -42,12 +43,12 @@
       />
 
       <hbox class="dialogheader">
-        <label class="dialogheader-title" data-l10n-id="dialog-header-title" />
+        <label class="dialogheader-title" value="&junkSettings.label;" />
       </hbox>
 
       <html:div>
         <html:fieldset>
-          <html:legend data-l10n-id="spam-classification-legend"></html:legend>
+          <html:legend>&junkClassification.label;</html:legend>
 
           <label
             hidden="true"
@@ -103,13 +104,14 @@
           <checkbox
             id="server.spamLevel.visible"
             oncommand="updateSpamLevel(this.checked);"
-            data-l10n-id="spam-level-checkbox"
+            accesskey="&level.accesskey;"
             prefstring="mail.server.%serverkey%.spamLevel"
+            label="&level.label;"
           />
 
           <separator class="thin" />
 
-          <description data-l10n-id="training-description-spam"></description>
+          <description width="1">&trainingDescription.label;</description>
 
           <separator class="thin" />
           <spacer height="3" />
@@ -126,9 +128,10 @@
             />
             <label
               id="whiteListLabel"
-              data-l10n-id="allowlist-header-label"
+              accesskey="&whitelistHeader.accesskey;"
               control="whiteListAbURI"
-            />
+              >&whitelistHeader.label;</label
+            >
             <richlistbox id="whiteListAbURI" height="200px" />
           </vbox>
 
@@ -138,7 +141,8 @@
             <hbox>
               <checkbox
                 id="server.useServerFilter"
-                data-l10n-id="isp-headers-checkbox"
+                label="&ispHeaders.label;"
+                accesskey="&ispHeaders.accesskey;"
                 genericattr="true"
                 pref="true"
                 wsm_persist="true"
@@ -156,10 +160,9 @@
 
           <separator class="thin" />
 
-          <description
-            class="indent tip-caption"
-            data-l10n-id="isp-warning-description"
-          />
+          <description class="indent tip-caption" width="1"
+            >&ispHeadersWarning.label;</description
+          >
         </html:fieldset>
       </html:div>
 
@@ -168,11 +171,12 @@
 
       <html:div>
         <html:fieldset>
-          <html:legend data-l10n-id="spam-actions-legend"></html:legend>
+          <html:legend>&junkActions.label;</html:legend>
 
           <checkbox
             id="server.moveOnSpam"
-            data-l10n-id="move-spam-message-menuitem"
+            label="&move.label;"
+            accesskey="&move.accesskey;"
             oncommand="updateJunkTargetsAndRetention();"
             wsm_persist="true"
             pref="true"
@@ -198,14 +202,16 @@
                   <radio
                     id="moveTargetMode0"
                     value="0"
-                    data-l10n-id="set-spam-folder-menuitem"
+                    label="&junkFolderOn.label;"
+                    accesskey="&junkFolderOn.accesskey;"
                   />
                 </hbox>
                 <hbox flex="1" align="center">
                   <radio
                     id="moveTargetMode1"
                     value="1"
-                    data-l10n-id="move-message-other"
+                    label="&otherFolder.label;"
+                    accesskey="&otherFolder.accesskey;"
                   />
                 </hbox>
               </vbox>
@@ -245,13 +251,14 @@
           <hbox align="center" class="indent">
             <checkbox
               id="server.purgeSpam"
-              data-l10n-id="automatic-spam-purge-checkbox"
               genericattr="true"
               pref="true"
               wsm_persist="true"
               preftype="bool"
               prefstring="mail.server.%serverkey%.purgeSpam"
+              accesskey="&purge1.accesskey;"
               oncommand="updateJunkRetention();"
+              label="&purge1.label;"
             />
             <html:input
               id="server.purgeSpamInterval"
@@ -267,7 +274,7 @@
             />
             <label
               id="purgeLabel"
-              data-l10n-id="automatic-spam-purge-label"
+              value="&purge2.label;"
               control="server.purgeSpamInterval"
             />
           </hbox>
@@ -279,7 +286,8 @@
       <hbox pack="end">
         <button
           id="globalJunkPrefsLink"
-          data-l10n-id="global-spam-preferences-button"
+          label="&globalJunkPrefs.label;"
+          accesskey="&globalJunkPrefs.accesskey;"
           oncommand="showGlobalJunkPrefs();"
         />
       </hbox>
